--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a simple HTML document.</p>
+    <header>
+        <h1>Hello world</h1>
+        <h4>Is this working </h4>
+    </header>
 
-    <script src="greeter.js"></script>
+    <script src="./ForBeginners/variables.js"></script>
 </body>
 </html>
